crates/analyzer/tests/snapshots/analysis__two_contracts.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/two_contracts.fe\", &src, module, &db)"

---
note: 
  ┌─ features/two_contracts.fe:3:5
  │
3 │     other: Bar
  │     ^^^^^^^^^^ Bar

note: 
  ┌─ features/two_contracts.fe:5:5
  │  
5 │ ╭     pub fn external_bar() -> u256:
6 │ │         return Bar(address(0)).bar()
  │ ╰────────────────────────────────────^ attributes hash: 17979516652885443340
  │  
  = FunctionSignature {
        self_decl: None,
        params: [],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ features/two_contracts.fe:6:28
  │
6 │         return Bar(address(0)).bar()
  │                            ^ u256: Value => None

note: 
  ┌─ features/two_contracts.fe:6:20
  │
6 │         return Bar(address(0)).bar()
  │                    ^^^^^^^^^^ address: Value => None

note: 
  ┌─ features/two_contracts.fe:6:16
  │
6 │         return Bar(address(0)).bar()
  │                ^^^^^^^^^^^^^^^ Bar: Value => None

note: 
  ┌─ features/two_contracts.fe:6:16
  │
6 │         return Bar(address(0)).bar()
  │                ^^^^^^^^^^^^^^^^^^^^^ u256: Value => None

note: 
  ┌─ features/two_contracts.fe:6:16
  │
6 │         return Bar(address(0)).bar()
  │                ^^^^^^^^^^^^^^^^^^^ attributes hash: 15856680294290209687
  │
  = ValueAttribute

note: 
  ┌─ features/two_contracts.fe:6:16
  │
6 │         return Bar(address(0)).bar()
  │                ^^^ attributes hash: 6689852709950325620
  │
  = TypeConstructor {
        typ: Contract(
            Contract {
                name: "Bar",
                id: ContractId(
                    1,
                ),
            },
        ),
    }

note: 
  ┌─ features/two_contracts.fe:6:20
  │
6 │         return Bar(address(0)).bar()
  │                    ^^^^^^^ attributes hash: 14203407709342965641
  │
  = TypeConstructor {
        typ: Base(
            Address,
        ),
    }

note: 
  ┌─ features/two_contracts.fe:8:5
  │  
8 │ ╭     pub fn foo() -> u256:
9 │ │         return 42
  │ ╰─────────────────^ attributes hash: 17979516652885443340
  │  
  = FunctionSignature {
        self_decl: None,
        params: [],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ features/two_contracts.fe:9:16
  │
9 │         return 42
  │                ^^ u256: Value => None

note: 
   ┌─ features/two_contracts.fe:13:5
   │
13 │     other: Foo
   │     ^^^^^^^^^^ Foo

note: 
   ┌─ features/two_contracts.fe:15:5
   │  
15 │ ╭     pub fn external_foo() -> u256:
16 │ │         return Foo(address(0)).foo()
   │ ╰────────────────────────────────────^ attributes hash: 17979516652885443340
   │  
   = FunctionSignature {
         self_decl: None,
         params: [],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
   ┌─ features/two_contracts.fe:16:28
   │
16 │         return Foo(address(0)).foo()
   │                            ^ u256: Value => None

note: 
   ┌─ features/two_contracts.fe:16:20
   │
16 │         return Foo(address(0)).foo()
   │                    ^^^^^^^^^^ address: Value => None

note: 
   ┌─ features/two_contracts.fe:16:16
   │
16 │         return Foo(address(0)).foo()
   │                ^^^^^^^^^^^^^^^ Foo: Value => None

note: 
   ┌─ features/two_contracts.fe:16:16
   │
16 │         return Foo(address(0)).foo()
   │                ^^^^^^^^^^^^^^^^^^^^^ u256: Value => None

note: 
   ┌─ features/two_contracts.fe:16:16
   │
16 │         return Foo(address(0)).foo()
   │                ^^^^^^^^^^^^^^^^^^^ attributes hash: 15856680294290209687
   │
   = ValueAttribute

note: 
   ┌─ features/two_contracts.fe:16:16
   │
16 │         return Foo(address(0)).foo()
   │                ^^^ attributes hash: 1647454659037951517
   │
   = TypeConstructor {
         typ: Contract(
             Contract {
                 name: "Foo",
                 id: ContractId(
                     0,
                 ),
             },
         ),
     }

note: 
   ┌─ features/two_contracts.fe:16:20
   │
16 │         return Foo(address(0)).foo()
   │                    ^^^^^^^ attributes hash: 14203407709342965641
   │
   = TypeConstructor {
         typ: Base(
             Address,
         ),
     }

note: 
   ┌─ features/two_contracts.fe:18:5
   │  
18 │ ╭     pub fn bar() -> u256:
19 │ │         return 26
   │ ╰─────────────────^ attributes hash: 17979516652885443340
   │  
   = FunctionSignature {
         self_decl: None,
         params: [],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
   ┌─ features/two_contracts.fe:19:16
   │
19 │         return 26
   │                ^^ u256: Value => None


