crates/analyzer/tests/snapshots/analysis__while_loop.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/while_loop.fe\", &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/while_loop.fe:3:25
  │
3 │         let val: u256 = 0
  │                         ^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:4:15
  │
4 │         while val < 2:
  │               ^^^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:4:21
  │
4 │         while val < 2:
  │                     ^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:4:15
  │
4 │         while val < 2:
  │               ^^^^^^^ attributes hash: 519621297275845584
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:5:13
  │
5 │             val = val + 1
  │             ^^^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:5:19
  │
5 │             val = val + 1
  │                   ^^^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:5:25
  │
5 │             val = val + 1
  │                         ^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:5:19
  │
5 │             val = val + 1
  │                   ^^^^^^^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:6:16
  │
6 │             if val == 2:
  │                ^^^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:6:23
  │
6 │             if val == 2:
  │                       ^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:6:16
  │
6 │             if val == 2:
  │                ^^^^^^^^ attributes hash: 519621297275845584
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:7:17
  │
7 │                 val = 3
  │                 ^^^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:7:23
  │
7 │                 val = 3
  │                       ^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:8:16
  │
8 │         return val
  │                ^^^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop.fe:2:5
  │  
2 │ ╭     pub fn bar() -> u256:
3 │ │         let val: u256 = 0
4 │ │         while val < 2:
5 │ │             val = val + 1
6 │ │             if val == 2:
7 │ │                 val = 3
8 │ │         return val
  │ ╰──────────────────^ attributes hash: 5931278080780939395
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [],
        return_type: Base(
            Numeric(
                U256,
            ),
        ),
    }

note: 
  ┌─ features/while_loop.fe:3:9
  │
3 │         let val: u256 = 0
  │         ^^^^^^^^^^^^^^^^^ attributes hash: 4293763436908729629
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/while_loop.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub fn bar() -> u256:
3 │ │         let val: u256 = 0
4 │ │         while val < 2:
  · │
7 │ │                 val = 3
8 │ │         return val
  │ ╰──────────────────^ attributes hash: 5268314470252829497
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [],
                return_type: Base(
                    Numeric(
                        U256,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
    }

note: 
  ┌─ features/while_loop.fe:2:21
  │
2 │     pub fn bar() -> u256:
  │                     ^^^^ attributes hash: 4293763436908729629
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/while_loop.fe:3:18
  │
3 │         let val: u256 = 0
  │                  ^^^^ attributes hash: 4293763436908729629
  │
  = Base(
        Numeric(
            U256,
        ),
    )


