crates/analyzer/tests/snapshots/analysis__while_loop_with_break_2.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
   ┌─ while_loop_with_break_2.fe:2:5
   │  
 2 │ ╭     pub fn bar() -> u256 {
 3 │ │         let val: u256 = 0
 4 │ │         while val < 2 {
 5 │ │             val = val + 1
   · │
10 │ │         return val
11 │ │     }
   │ ╰─────^ attributes hash: 6115314201970082834
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: None,
         params: [],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
  ┌─ while_loop_with_break_2.fe:3:18
  │
3 │         let val: u256 = 0
  │                  ^^^^ u256

note: 
  ┌─ while_loop_with_break_2.fe:3:25
  │
3 │         let val: u256 = 0
  │                         ^ u256: Value
4 │         while val < 2 {
  │               ^^^   ^ u256: Value
  │               │      
  │               u256: Value

note: 
  ┌─ while_loop_with_break_2.fe:4:15
  │
4 │         while val < 2 {
  │               ^^^^^^^ bool: Value
5 │             val = val + 1
  │             ^^^   ^^^   ^ u256: Value
  │             │     │      
  │             │     u256: Value
  │             u256: Value

note: 
  ┌─ while_loop_with_break_2.fe:5:19
  │
5 │             val = val + 1
  │                   ^^^^^^^ u256: Value
6 │             if val == 1 {
  │                ^^^    ^ u256: Value
  │                │       
  │                u256: Value

note: 
   ┌─ while_loop_with_break_2.fe:6:16
   │
 6 │             if val == 1 {
   │                ^^^^^^^^ bool: Value
   ·
10 │         return val
   │                ^^^ u256: Value


