crates/analyzer/tests/snapshots/analysis__while_loop_with_continue.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
   ┌─ while_loop_with_continue.fe:2:5
   │  
 2 │ ╭     pub fn bar() -> u256 {
 3 │ │         let i: u256 = 0
 4 │ │         let counter: u256 = 0
 5 │ │         while i < 2 {
   · │
12 │ │         return counter
13 │ │     }
   │ ╰─────^ attributes hash: 6115314201970082834
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: None,
         params: [],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
  ┌─ while_loop_with_continue.fe:3:16
  │
3 │         let i: u256 = 0
  │                ^^^^ u256
4 │         let counter: u256 = 0
  │                      ^^^^ u256

note: 
  ┌─ while_loop_with_continue.fe:3:23
  │
3 │         let i: u256 = 0
  │                       ^ u256: Value
4 │         let counter: u256 = 0
  │                             ^ u256: Value
5 │         while i < 2 {
  │               ^   ^ u256: Value
  │               │    
  │               u256: Value

note: 
  ┌─ while_loop_with_continue.fe:5:15
  │
5 │         while i < 2 {
  │               ^^^^^ bool: Value
6 │             i = i + 1
  │             ^   ^   ^ u256: Value
  │             │   │    
  │             │   u256: Value
  │             u256: Value

note: 
  ┌─ while_loop_with_continue.fe:6:17
  │
6 │             i = i + 1
  │                 ^^^^^ u256: Value
7 │             if i == 1 {
  │                ^    ^ u256: Value
  │                │     
  │                u256: Value

note: 
   ┌─ while_loop_with_continue.fe:7:16
   │
 7 │             if i == 1 {
   │                ^^^^^^ bool: Value
   ·
10 │             counter = counter + 1
   │             ^^^^^^^   ^^^^^^^   ^ u256: Value
   │             │         │          
   │             │         u256: Value
   │             u256: Value

note: 
   ┌─ while_loop_with_continue.fe:10:23
   │
10 │             counter = counter + 1
   │                       ^^^^^^^^^^^ u256: Value
11 │         }
12 │         return counter
   │                ^^^^^^^ u256: Value


